# renovation-calculator

./: .gitignore  README.md  docker-compose.yaml
client/: .editorconfig  Dockerfile  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  rtk-query.config.json  tsconfig.app.json  vite.config.ts
client/src/: main.tsx
client/src/app/: app.tsx
client/src/entities/: wall.tsx
client/src/features/: search-floors.tsx  search-walls.tsx
client/src/pages/: calculator.tsx  catalog.tsx
client/src/shared/: layout.tsx
client/src/shared/api/: api.ts  baseApi.ts
client/src/shared/store/: store.ts
client/src/shared/ui/: layout.tsx  search.tsx
client/src/shared/utils/: debounce.ts
client/src/widgets/: calculator.tsx  catalog.tsx
server/: Dockerfile  alembic.ini  di.py  entrypoint.sh  main.py  pyproject.toml  settings.py
server/domain/: filter.py  floor.py  wall.py
server/server/: app.py
server/server/api/: __init__.py  model.py
server/server/api/catalog/: __init__.py  models.py  router.py
server/storage/: reader.py  saver.py
server/storage/mock/: __init__.py  saver.py
server/storage/postgres/: __init__.py  mappers.py  provider.py  reader.py  saver.py
server/storage/postgres/alembic/: env.py
server/storage/postgres/alembic/versions/: 18935fe5c959_added_names.py  5cb5cd47dc7c_added_walls_and_floors.py
server/storage/postgres/models/: __init__.py  base.py  floor.py  wall.py
server/worker/: bs4.py  parser.py
server/worker/sites/ekonomstroy/: parser.py
