[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["mihett05 <mihett05@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.10"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
